# bullboard-rs

./: .gitignore  Cargo.toml  bullboard.db
src/: aggregate.rs  cli.rs  cli_output.rs  cqrs.rs  dashboard.rs  date_utils.rs  demo.rs  event_store.rs  events.rs  journal.rs  lib.rs  main.rs  portfolio.rs  test_utils.rs  value_objects.rs
src/event_store/: memory.rs  sqlite.rs
tests/: end_to_end.rs  example.rs
tests/features/: dashboard.feature  journal.feature
tests/features/step_definitions/: dashboard_steps.rb
tests/features/support/: env.rb
