[package]
name = "bullboard"
version = "0.1.0"
edition = "2021"
authors = ["Bèr Kessels <bullhorn@berk.es>"]
description = "A command line tool to watch you investment portfolio. Slowly."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.4.0", features = ["cargo"] }
prettytable-rs = "0.10.0"
rust_decimal = "1.31.0"

[dev-dependencies]
cucumber = "0.20.0"
futures = "0.3.28"
pretty_assertions = "1.4.0"

[[test]]
name = "end_to_end"
harness = false
